# Earnings-Call-Sentiment-Analysis-FinBERT-vs.-Naive-Bayes-LR-TF-IDF

./: .gitignore  README.md  baseline_run.txt  comparison_run.txt  pyproject.toml
baselines/: tfidf_models.py
evaluation/: compare_models.py
finbert/: finbert_pipeline.ipynb  inference.py
shared/: compute_car.py  load_data.py
