[build-system]
requires = ["setuptools>=79", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs-4267-earnings-sentiment"
version = "0.1.0"
description = "Earnings-call sentiment analysis pipelines and evaluation utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch @ https://files.pythonhosted.org/packages/3f/14/e105b8ef6d324e789c1589e95cb0ab63f3e07c2216d68b1178b7c21b7d2a/torch-2.2.2-cp311-none-macosx_10_9_x86_64.whl ; sys_platform == 'darwin' and platform_machine == 'x86_64' and python_version == '3.11'",
    "torch>=2.11.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "transformers>=5.6.2",
    "yfinance>=1.3.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["baselines", "evaluation", "finbert", "shared"]
